<resources>
    <string name="app_name">Tasker Health Connect</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="app_ready">Permissions are granted and Health Connect is available. Open Tasker, and look for Tasker Health Connect inside Action -> Plugins</string>
    <string name="permissions_not_granted">Not all permissions have been granted, open the Health Connect app to grant permissions</string>
    <string name="health_connect_unavailable">Health connect is not installed or is unavailable, check for updates</string>
    <string name="health_connect_unavailable_or_permissions">Health Connect is unavailable or permissions are not granted</string>
    <string name="install">Install Health Connect</string>
    <string name="open">Open Health Connect</string>
    <string name="failed_to_install">Failed to open Health Connect installation page</string>
    <string name="failed_to_open">Failed to open Health Connect settings page</string>
    <string name="failed_to_open_toolbox">Failed to open Health Connect Toolbox</string>
    <string name="debug">Debug</string>
    <string name="done">Done</string>
    <string name="record_type">Class of the type of Health Record</string>
    <string name="record_type_description">The Class Name of the type of Health Record. This must be a valid class from androidx.health.connect.client.records.* package, e.g. StepsRecord. Supports Tasker Variables.</string>
    <string name="start_time_milliseconds">Start Timestamp</string>
    <string name="start_time_milliseconds_description">The timestamp (in epoch milliseconds) to start fetching records from. Supports Tasker Variables like %TIMEMS.</string>
    <string name="end_time_milliseconds">End Timestamp</string>
    <string name="end_time_milliseconds_description">The timestamp (in epoch milliseconds) to stop fetching records from. Supports Tasker Variables like %TIMEMS.</string>
    <string name="read_aggregated_data">Read Aggregated Data</string>
    <string name="read_aggregated_data_description">Data will be returned as a JSON object, see HealthConnectClient.aggregate API for the response format.</string>
    <string name="write_data">Write Data</string>
    <string name="read_data">Read Data</string>
    <string name="read_data_description">Data will be returned as a JSON object, see HealthConnectClient.readRecords API for the response format.</string>
    <string name="write_data_response">Write Data Response</string>
    <string name="write_data_response_description">Data will be returned as a JSON object, see HealthConnectClient.insertRecords API for the response format.</string>
    <string name="write_data_input">JSON Object or List of Objects to write</string>
    <string name="write_data_input_description">A JSON object or array of records to write.
        Supports Tasker Variables. All fields that are not optional (name ending with ?) / nullable and don\'t have
        default values on the actual Class Constructor must be present, except for Metadata which
        will be set to a default value if missing. You can use epoch millisecond timestamps for Instant / Date
        Time fields, like 1746646647993. Enum values should be the name of the enum exactly as a string, like "CELSIUS".
        The JSON Objects should be an exact representation of the Java / Kotlin Class Constructor fields.
        E.g. for BasalBodyTemperatureRecord:"\n{\n  \"time\": 1746646657868,\n  \"temperature\": {\n    \"value\": 38.0,\n    \"type\": \"CELSIUS\"\n  }\n}"</string>
    <string name="version">Version %s</string>
    <string name="check_updates">Check for updates</string>
    <string name="health_connect_api">Health Connect API</string>
    <string name="health_connect_toolbox">Health Connect Toolbox</string>
    <string name="aggregate_metric">Aggregate Metric Class.Field</string>
    <string name="aggregate_metric_description">The Aggregate Metric to return from androidx.health.connect.client.records.* package, must be in the format ClassName.FieldName, e.g. StepsRecord.COUNT_TOTAL</string>
    <string name="delete_data">Delete Data</string>
    <string name="delete_data_description">Deletes records of the specified type within the given time range.</string>
</resources>
